# rust-wasm-ssr-experiment

./: README.md  load.js
rust-backend/: .gitignore  Cargo.toml  ssr.wasm  wasmtime_config.toml
rust-backend/src/: main.rs
rust-backend/static/: hydration.min.js  style.css
vite-react-ssr/: .gitignore  build.sh  package-lock.json  package.json  tsconfig.node.json  vite.hydration.config.ts  vite.site.config.ts  vite.ssr.config.ts
vite-react-ssr/src/: App.tsx  hydration.tsx  index.css  main.tsx  ssr.tsx
vite-svelte-ssr/: .gitignore  build.sh  index.html  package-lock.json  package.json  tsconfig.json  tsconfig.node.json  vite.hydration.config.ts  vite.site.config.ts  vite.ssr.config.ts
vite-svelte-ssr/src/: App.svelte  AppProps.ts  app.css  compile.ts  hydration.ts  javy.d.ts  main.ts  ssr.ts  ssr.wit  window.d.ts
vs-astro/: package-lock.json  package.json
vs-astro/src/components/: App.tsx
vs-astro/src/layouts/: Layout.astro
vs-astro/src/pages/: index.astro
