[package]
name = "rust-backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web = "4"
actix-files = "0.6.2"
leptos = "0.5.0-beta2"
wasmtime = "12.0.1"
wasmtime-wasi = "12.0.1"
wasi-common = "12.0.1"
